fix: fixed the hamburger menu visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -539,6 +539,7 @@ a:visited {
     top: 50%;
     left: 0;
     opacity: 0;
+    visibility: hidden;
     transform: translate(-50%, -50%);
     transition: all 0.8s cubic-bezier(0.25, 0.1, 0.49, 1.57); }
   .menu__list {
@@ -563,6 +564,7 @@ a:visited {
     transform: translateX(1rem); }
   .menu__checkbox:checked ~ .menu__navigation {
     opacity: 1;
+    visibility: visible;
     left: 50%; }
 
 .header {
